; ModuleID = '/home/carl/AnghaBench/zfs/cmd/zed/agents/extr_zfs_diagnosis.c_zpool_find_load_time.c'
source_filename = "/home/carl/AnghaBench/zfs/cmd/zed/agents/extr_zfs_diagnosis.c_zpool_find_load_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.load_time_arg = type { i64, %struct.TYPE_2__*, i64 }
%struct.TYPE_2__ = type { i64, i64 }

@ZPOOL_PROP_GUID = common dso_local global i32 0, align 4
@ZPOOL_CONFIG_LOADED_TIME = common dso_local global i32 0, align 4
@B_TRUE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @zpool_find_load_time to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zpool_find_load_time(i32* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.load_time_arg*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = bitcast i8* %11 to %struct.load_time_arg*
  store %struct.load_time_arg* %12, %struct.load_time_arg** %6, align 8
  %13 = load %struct.load_time_arg*, %struct.load_time_arg** %6, align 8
  %14 = getelementptr inbounds %struct.load_time_arg, %struct.load_time_arg* %13, i32 0, i32 2
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %2
  %18 = load i32*, i32** %4, align 8
  %19 = call i32 @zpool_close(i32* %18)
  store i32 0, i32* %3, align 4
  br label %68

20:                                               ; preds = %2
  %21 = load i32*, i32** %4, align 8
  %22 = load i32, i32* @ZPOOL_PROP_GUID, align 4
  %23 = call i64 @zpool_get_prop_int(i32* %21, i32 %22, i32* null)
  store i64 %23, i64* %7, align 8
  %24 = load i64, i64* %7, align 8
  %25 = load %struct.load_time_arg*, %struct.load_time_arg** %6, align 8
  %26 = getelementptr inbounds %struct.load_time_arg, %struct.load_time_arg* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = icmp ne i64 %24, %27
  br i1 %28, label %29, label %32

29:                                               ; preds = %20
  %30 = load i32*, i32** %4, align 8
  %31 = call i32 @zpool_close(i32* %30)
  store i32 0, i32* %3, align 4
  br label %68

32:                                               ; preds = %20
  %33 = load i32*, i32** %4, align 8
  %34 = call i32* @zpool_get_config(i32* %33, i32* null)
  store i32* %34, i32** %9, align 8
  %35 = icmp eq i32* %34, null
  br i1 %35, label %36, label %39

36:                                               ; preds = %32
  %37 = load i32*, i32** %4, align 8
  %38 = call i32 @zpool_close(i32* %37)
  store i32 -1, i32* %3, align 4
  br label %68

39:                                               ; preds = %32
  %40 = load i32*, i32** %9, align 8
  %41 = load i32, i32* @ZPOOL_CONFIG_LOADED_TIME, align 4
  %42 = call i64 @nvlist_lookup_uint64_array(i32* %40, i32 %41, i64** %8, i32* %10)
  %43 = icmp eq i64 %42, 0
  br i1 %43, label %44, label %65

44:                                               ; preds = %39
  %45 = load i32, i32* %10, align 4
  %46 = icmp eq i32 %45, 2
  br i1 %46, label %47, label %65

47:                                               ; preds = %44
  %48 = load i64, i64* @B_TRUE, align 8
  %49 = load %struct.load_time_arg*, %struct.load_time_arg** %6, align 8
  %50 = getelementptr inbounds %struct.load_time_arg, %struct.load_time_arg* %49, i32 0, i32 2
  store i64 %48, i64* %50, align 8
  %51 = load i64*, i64** %8, align 8
  %52 = getelementptr inbounds i64, i64* %51, i64 0
  %53 = load i64, i64* %52, align 8
  %54 = load %struct.load_time_arg*, %struct.load_time_arg** %6, align 8
  %55 = getelementptr inbounds %struct.load_time_arg, %struct.load_time_arg* %54, i32 0, i32 1
  %56 = load %struct.TYPE_2__*, %struct.TYPE_2__** %55, align 8
  %57 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %56, i32 0, i32 1
  store i64 %53, i64* %57, align 8
  %58 = load i64*, i64** %8, align 8
  %59 = getelementptr inbounds i64, i64* %58, i64 1
  %60 = load i64, i64* %59, align 8
  %61 = load %struct.load_time_arg*, %struct.load_time_arg** %6, align 8
  %62 = getelementptr inbounds %struct.load_time_arg, %struct.load_time_arg* %61, i32 0, i32 1
  %63 = load %struct.TYPE_2__*, %struct.TYPE_2__** %62, align 8
  %64 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %63, i32 0, i32 0
  store i64 %60, i64* %64, align 8
  br label %65

65:                                               ; preds = %47, %44, %39
  %66 = load i32*, i32** %4, align 8
  %67 = call i32 @zpool_close(i32* %66)
  store i32 0, i32* %3, align 4
  br label %68

68:                                               ; preds = %65, %36, %29, %17
  %69 = load i32, i32* %3, align 4
  ret i32 %69
}

declare dso_local i32 @zpool_close(i32*) #1

declare dso_local i64 @zpool_get_prop_int(i32*, i32, i32*) #1

declare dso_local i32* @zpool_get_config(i32*, i32*) #1

declare dso_local i64 @nvlist_lookup_uint64_array(i32*, i32, i64**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
